--- a/style.css
+++ b/style.css
@@ -80,6 +80,53 @@ nav a:hover {
     max-width: 600px; /* Set a more standard width in pixels or another appropriate unit */
     margin: auto;
 }
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+}
+
+#quiz-container {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.question {
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+
+.options {
+    display: flex;
+    flex-direction: column;
+}
+
+.option {
+    margin-bottom: 5px;
+}
+
+#result {
+    margin-top: 20px;
+    font-weight: bold;
+}
+
+#submit-btn {
+    margin-top: 10px;
+    padding: 8px;
+    cursor: pointer;
+    background-color: #3498db;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+}
+
 
 .carousel-inner img {
     width: 50%;
