--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
     padding: 8px;
     cursor: pointer;
     background-color: #3498db;
-    color: #fff;
+    color: #ffa23a;
     border: none;
     border-radius: 4px;
 }
