--- a/styles.css
+++ b/styles.css
@@ -1,85 +1,32 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #6c88c4;
     margin: 0;
     padding: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
 }
 
 #quiz-container {
-    background-color: #fff;
+    max-width: 600px;
+    margin: auto;
     padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.question {
-    font-size: 18px;
-    margin-bottom: 10px;
+#question-container {
+    margin-bottom: 20px;
 }
 
-.options {
-    display: flex;
-    flex-direction: column;
-}
-
-.option {
-    margin-bottom: 5px;
-}
-
-#result {
-    margin-top: 20px;
-    font-weight: bold;
-}
-
-#submit-btn {
-    margin-top: 20px;
-    padding: 16px;
-    cursor: pointer;
-    background-color: #3498db;
-    color: #ffa23a;
-    border: none;
-    border-radius: 8px;
-}
-
-header {
-    background-color: #333;
-    padding: 10px 0;
-}
-
-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 1200px;
-    margin: 0 auto;
-}
-
-.logo {
-    color: #fff;
-    font-size: 1.5em;
-}
-
-ul {
+#options {
     list-style: none;
-    display: flex;
-    margin: 0;
     padding: 0;
 }
 
-li {
-    margin-right: 20px;
+#options li {
+    margin-bottom: 10px;
 }
 
-a {
-    text-decoration: none;
-    color: #fff;
-    font-weight: bold;
+#button-container {
+    text-align: center;
 }
 
-a:hover {
-    text-decoration: underline;
+#result-container {
+    margin-top: 20px;
 }
